--- a/#1 - Introduction - variables, structures et fonctions/1_Variables_structures_et_fonctions.ipynb
+++ b/#1 - Introduction - variables, structures et fonctions/1_Variables_structures_et_fonctions.ipynb
@@ -77,7 +77,7 @@
         "print(\"Bonjour\")\n",
         "'bonjour'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "a = 10\n",
         "print(f'La variable A = {a}')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "038746a1-d41b-43b4-d369-e338ff058c3d"
+        "outputId": "319dc814-7223-4eea-ef9b-4b6d71eb480f"
       },
       "source": [
         "#Integer 0,1,2,3 (N) #int\n",
@@ -151,7 +151,7 @@
         "print(variable3)\n",
         "print(type(variable3))"
       ],
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "\n",
         "print(bool(1),bool(0))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "print(variable6)\n",
         "print(type(variable6))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +279,7 @@
         "id": "XTCQDwaBsbV9"
       },
       "source": [],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
         "id": "4WrY-4H9ssMR"
       },
       "source": [],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,30 +312,29 @@
       "metadata": {
         "id": "5XvvLvSFiKOx",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2320a88a-f89a-4e95-b9e9-391f15c0c3df"
+        "outputId": "42dfd330-2c0e-489b-9618-e99ff3121133"
       },
       "source": [
-        "#if else / elif Permet de mettre des conditions if <condition1> :\n",
+        "#if else / elif permet de mettre des condition\n",
         "variable1000 = \"PSG\"\n",
         "\n",
-        "if variable1000 == 'PSG':\n",
+        "if variable1000 == \"PSG\":\n",
         "  print(\"c'est le PSG\")\n",
-        "elif variable1000 == \"Olympique de Marseille\" :\n",
-        "  print(\"c'est l'OM\")\n",
+        "elif variable1000 == \"Stade Toulousain\":\n",
+        "  print(\"c'est le stade\")\n",
         "else:\n",
-        "  print(\"ce n'est ni l'om ni le psg\")"
+        "  print(\"ce n'est aucun des deux\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "c'est le PSG\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -344,34 +343,28 @@
       "metadata": {
         "id": "hivl3C9NwE5-",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 345
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6331bb5a-7dd8-41cf-d215-6f5c13826b58"
+        "outputId": "ea060669-3caf-45a8-991d-a47badbaadf8"
       },
       "source": [
-        "#Boucle for <variable> in <list>:  ATTENTION AU BOUCLE INFINI ie sans condition d'arrêt\n",
-        "#NEVER REPEAT YOURSELF\n",
+        "#Boucle for <varibale> in <list>:\n",
+        "#NEVER REOAAT YOURSELF\n",
         "\n",
         "for i in [0,1,2,3]:\n",
         "  print(i)\n",
         "  print(variable1000)\n",
         "\n",
-        "#print(variable1000)\n",
-        "#print(variable1000)\n",
-        "#print(variable1000)\n",
-        "#print(variable1000)\n",
-        "#print(variable1000)\n",
-        "\n",
-        "for i in range(10): #PRINT UNIQUEMENT JUSQU'A 9, CAR COMMENCE A 0\n",
+        "for i in range(10): #print uniquement jusquà 9 commence à 0\n",
         "  print(i)\n",
         "\n",
         "del i"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "PSG\n",
@@ -391,8 +384,7 @@
             "7\n",
             "8\n",
             "9\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -401,50 +393,22 @@
       "metadata": {
         "id": "OZJ5N-cXx2AJ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 171
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "996e9968-0dd4-4406-868f-71d504ae1f10"
+        "outputId": "2b069b1f-c30b-4746-aeb0-b11b5b989670"
       },
       "source": [
-        "print(i)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-42-3b184248ad5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "o8Xb9YNWxSpG",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 199
-        },
-        "outputId": "f1702930-ab03-4178-e26d-f5f050fee191"
-      },
-      "source": [
-        "#while <condition> pas résolu, on boucle\n",
-        "i=0\n",
+        "#while tant que\n",
+        "i = 0\n",
         "while(i!=10):\n",
         "  print(i)\n",
-        "  i = i+1"
+        "  i = i+ 1"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "1\n",
@@ -456,10 +420,18 @@
             "7\n",
             "8\n",
             "9\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o8Xb9YNWxSpG"
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -475,10 +447,9 @@
       "metadata": {
         "id": "yXquuZ_siKiZ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3956637a-a86b-494f-c64e-0b18e60d09ba"
+        "outputId": "b91530f9-a81e-408c-a0e7-fe70861555a5"
       },
       "source": [
         "#Fonction def NOM_FONCTION(ARGUMENT) Argument = les variables qui vont être utilisées dans la fonction\n",
@@ -486,25 +457,20 @@
         "  mean_of_two_numbers = (number1 + number2) / 2\n",
         "  return mean_of_two_numbers\n",
         "\n",
-        "#print()\n",
-        "\n",
-        "print(mean(10,20))\n",
-        "print(mean(15,20))\n",
-        "print(mean(432452343,432432432))"
+        "mean(10,20)\n",
+        "mean(15,20)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "432442387.5"
+              "15.0"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     },
