--- a/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
+++ b/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
@@ -50,27 +50,29 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "wLWIF-Tcs1d7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "outputId": "e8ebf928-b21e-4329-f5c5-e0caee1196d5"
-      },
       "source": [
         "## definir un attribut privé : __ATTRIBUT\n",
+        "\n",
         "class Animal:\n",
         "\n",
-        "    def __init__(self,race):\n",
-        "        self.__race = race\n",
+        "  def __init__(sefl,race):\n",
+        "    self.__race = race\n",
         "\n",
+        "Toto_le_lion = Animal('Lion') # Lion est une instance de ma classe Animal\n",
         "\n",
-        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
+        "print(Toto_le_lion.__race) # error car l'attribut est privé\n",
         "\n",
-        "print(toto_le_lion.__race)"
+        "\n"
       ],
-      "execution_count": 1,
+      "metadata": {
+        "id": "cTBWJB4mdgVG",
+        "outputId": "b0b26e61-4bc9-4d5b-8461-8122b9c6735b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
@@ -79,7 +81,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-01608dadab86>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtoto_le_lion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Lion'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Lion est une instance de ma classe Animal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoto_le_lion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__race\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-4-3113d569789e>\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mToto_le_lion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAnimal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Lion'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Lion est une instance de ma classe Animal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mToto_le_lion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__race\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'Animal' object has no attribute '__race'"
           ]
         }
@@ -88,79 +90,87 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YqHSbAF-tLC4",
+        "id": "Z64cB6IzFjYg",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "269edbb1-4556-4a36-a423-56014bdef94c"
+        "outputId": "9a63d064-44d4-469a-9af8-1794ee4d73f8"
       },
       "source": [
-        "## Bonne pratique (coucou Java) définir des setteurs: get_attribut(self,attribut)\n",
+        "## Bonne pratique (coucou Java) définir des getteurs: get_attribut(self,attribut)\n",
+        "\n",
         "class Animal:\n",
         "\n",
-        "    def __init__(self,race):\n",
-        "        self.__race = race\n",
+        "  def __init__(self,race):\n",
+        "    self.__race = race\n",
         "\n",
-        "    def get_race(self):\n",
-        "        return self.__race\n",
+        "  def get_race(self):\n",
+        "    return self.__race\n",
         "\n",
-        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
-        "print(toto_le_lion.get_race())\n",
-        "toto_le_lion.__race = 'Lion de la savane'\n",
-        "print(toto_le_lion.get_race()) #On ne peut pas modifier encore l'attribut privé"
+        "\n",
+        "\n",
+        "Toto_le_lion = Animal('Lion') # Lion est une instance de ma classe Animal\n",
+        "\n",
+        "print(Toto_le_lion.get_race())\n",
+        "\n",
+        "Toto_le_lion.__race = 'Lion de la savane'\n",
+        "print(Toto_le_lion.get_race()) # on ne peut pas modifier l'attribut priver"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Lion\n",
             "Lion\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Z64cB6IzFjYg",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "703391d9-f836-4471-b8b5-c4e36b0f4a64"
-      },
       "source": [
-        "## Bonne pratique (coucou Java) définir des setteurs: set_attribut(self,attribut)\n",
+        "## Bonne pratique (coucou Java) définir des setteurs: get_attribut(self,attribut)\n",
+        "\n",
         "class Animal:\n",
-        "    def __init__(self,race):\n",
-        "        self.__race = race\n",
         "\n",
-        "    def get_race(self):\n",
-        "        return self.__race\n",
+        "  def __init__(self,race):\n",
+        "    self.__race = race\n",
         "\n",
-        "    def set_race(self,nouvelle_race):\n",
-        "        self.__race = nouvelle_race\n",
-        "        return\n",
+        "  def get_race(self):\n",
+        "    return self.__race\n",
         "\n",
-        "toto_le_lion = Animal('Lion') #Lion est une instance de ma classe Animal\n",
+        "  def set_race(self,nouvelle_race):\n",
+        "    self.__race = nouvelle_race\n",
+        "    return\n",
         "\n",
-        "print(toto_le_lion.get_race())\n",
-        "toto_le_lion.set_race('Lion de la savane')\n",
         "\n",
-        "print(toto_le_lion.get_race())"
+        "\n",
+        "Toto_le_lion = Animal('Lion') # Lion est une instance de ma classe Animal\n",
+        "\n",
+        "print(Toto_le_lion.get_race())\n",
+        "\n",
+        "Toto_le_lion.set_race('Lion de la savane')\n",
+        "\n",
+        "print(Toto_le_lion.get_race()) # on ne peut pas modifier l'attribut priver"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "oq4a1Xhwfxnq",
+        "outputId": "3f2f812e-5348-4138-8a2a-660a13a79b3a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Lion\n",
             "Lion de la savane\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -178,60 +188,59 @@
       "metadata": {
         "id": "rEClPl7I0znf",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cf10f64d-ab0c-4510-db9a-9998ece04461"
+        "outputId": "83da5349-2855-4a29-cb6b-32d4c0526dce"
       },
       "source": [
+        "from os import name\n",
         "# super().__init__(), issubclass(subclass,class) et isinstance(instance, class)\n",
+        "\n",
         "class Felin:\n",
-        "    nombre_de_patte = 4\n",
-        "    carnivore = True\n",
+        "  nombre_de_patte = 4\n",
+        "  Carnivore = True\n",
         "\n",
-        "    def __init__(self,couleur):\n",
-        "        self.__couleur = couleur\n",
+        "  def __init__(self,couleur):\n",
+        "    self.__couleur = couleur\n",
         "\n",
-        "    def get_race(self):\n",
-        "        return self.__couleur\n",
         "\n",
-        "    def set_race(self,couleur):\n",
-        "        self.__couleur = couleur\n",
-        "        return\n",
+        "  def get_race(self):\n",
+        "    return self.__couleur\n",
         "\n",
-        "    def manger_viande(self):\n",
-        "        print('Je viens de manger de la viande')\n",
+        "  def set_race(self,couleur):\n",
+        "    self.__couleur = couleur\n",
+        "    return\n",
         "\n",
-        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
-        "    def __init__(self,race,name,couleur):\n",
-        "        super().__init__(couleur)\n",
-        "        self.__race = race\n",
-        "        self.name = name\n",
+        "  def manger_viande(self):\n",
+        "    print('Je viens de manger de la viande')\n",
         "\n",
-        "    def get_race(self):\n",
-        "        return self.__race\n",
+        "class Lion(Felin): # la classe lion devient classe fils de Felin\n",
+        "  def __init__(self,race,name,couleur):\n",
+        "    super().__init__(couleur)\n",
+        "    self.__race = race\n",
+        "    self.name = name\n",
         "\n",
-        "    def set_race(self,nouvelle_race):\n",
-        "        self.__race = nouvelle_race\n",
-        "        return\n",
+        "  def get_race(self):\n",
+        "    return self.__race\n",
         "\n",
-        "class Girafe:\n",
-        "    race = 'Girafe'\n",
+        "  def set_race(self,nouvelle_race):\n",
+        "    self.__race = nouvelle_race\n",
+        "    return\n",
         "\n",
-        "gerard_le_lion = Lion('Lion de la savane', 'gerard','rouge') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "gerard_le_lion = Lion('Lion de la savane' , 'gerard', 'rouge')\n",
         "\n",
         "print(gerard_le_lion.name, gerard_le_lion.get_race())\n",
         "gerard_le_lion.manger_viande()"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "gerard Lion de la savane\n",
             "Je viens de manger de la viande\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -336,10 +345,9 @@
       "metadata": {
         "id": "wHm0o4Wxt2FK",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80265689-039b-4d48-b0f9-c123deb6ba33"
+        "outputId": "7bfdde3c-0e6f-4c08-d3cc-6133ca6610e5"
       },
       "source": [
         "class Felin:\n",
@@ -372,23 +380,24 @@
         "        self.__race = nouvelle_race\n",
         "        return\n",
         "\n",
-        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
-        "hakim_le_lion = Lion('Lion des montagnes', 'hakim','marron') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
+        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige')\n",
+        "hakim_le_lion = Lion('Lion des montages', 'hakim','maron')\n",
         "\n",
-        "print(gerard_le_lion.nombre_de_patte,hakim_le_lion.nombre_de_patte)\n",
+        "print(gerard_le_lion.nombre_de_patte, hakim_le_lion.nombre_de_patte)\n",
         "\n",
         "Felin.nombre_de_patte = 3\n",
-        "print(gerard_le_lion.nombre_de_patte,hakim_le_lion.nombre_de_patte)"
+        "\n",
+        "print(gerard_le_lion.nombre_de_patte, hakim_le_lion.nombre_de_patte)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "4 4\n",
             "3 3\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -423,6 +432,96 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Felin:\n",
+        "    nombre_de_patte = 4 #CEST UN ATTRIBUT DE CLASSE\n",
+        "    carnivore = True #CEST UN ATTRIBUT DE CLASSE\n",
+        "    energie = 100\n",
+        "\n",
+        "    def __init__(self,couleur): # constructeur d'attribut d'instance\n",
+        "        self.__couleur = couleur\n",
+        "\n",
+        "    def get_race(self):\n",
+        "        return self.__couleur\n",
+        "\n",
+        "    def set_race(self,couleur):\n",
+        "        self.__couleur = couleur\n",
+        "        return\n",
+        "\n",
+        "    def manger_viande(self):\n",
+        "        print('Je viens de manger de la viande')\n",
+        "\n",
+        "    @classmethod\n",
+        "    def tout_les_felins_courent(cls): # attribut de classe\n",
+        "      cls.energie = cls.energie - 10\n",
+        "\n",
+        "      # 1er methode pour def une méthode de class\n",
+        "      # tout_les_felins_courent = classmethod(tout_les_felins_courent)\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def nombre_de_felins(nombre_de_lion, nombre_de_tigre):\n",
+        "      return nombre_de_lion+nombre_de_tigre\n",
+        "\n",
+        "      # 1er methode pour def une méthode de class\n",
+        "      # tout_les_felins_courent = staticmethod(nombre_de_felin)\n",
+        "\n",
+        "    def __str__(self):\n",
+        "      return 'Je suis un Félin'\n",
+        "\n",
+        "\n",
+        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
+        "    def __init__(self,race,name,couleur):\n",
+        "        super().__init__(couleur)\n",
+        "        self.__race = race\n",
+        "        self.name = name\n",
+        "\n",
+        "    def get_race(self):\n",
+        "        return self.__race\n",
+        "\n",
+        "    def set_race(self,nouvelle_race):\n",
+        "        self.__race = nouvelle_race\n",
+        "        return\n",
+        "\n",
+        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige')\n",
+        "hakim_le_lion = Lion('Lion des montages', 'hakim','maron')\n",
+        "\n",
+        "print(gerard_le_lion.energie, hakim_le_lion.energie)\n",
+        "print(Felin.energie)\n",
+        "\n",
+        "Felin.tout_les_felins_courent()\n",
+        "\n",
+        "print(gerard_le_lion.energie, hakim_le_lion.energie)\n",
+        "print(Felin.energie)\n",
+        "\n",
+        "print(Felin.nombre_de_felins(3, 2))\n",
+        "\n",
+        "print(gerard_le_lion)"
+      ],
+      "metadata": {
+        "id": "Rquaa0NPqjYP",
+        "outputId": "81fbed9b-03a0-4040-b8c4-c9530a6cc737",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 100\n",
+            "100\n",
+            "90 90\n",
+            "90\n",
+            "5\n",
+            "Je suis un Félin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -537,99 +636,6 @@
             "tags": []
           },
           "execution_count": 44
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qdqTLqedLYio",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        },
-        "outputId": "1dfdee9c-261e-4281-fd4a-0c864105d2e4"
-      },
-      "source": [
-        "class Felin:\n",
-        "    nombre_de_patte = 4 #CEST UN ATTRIBUT DE CLASSE\n",
-        "    carnivore = True #CEST UN ATTRIBUT DE CLASSE\n",
-        "    energie=100\n",
-        "\n",
-        "    def __init__(self,couleur): #CONSTRUCTEUR D'ATTRIBUT D'INSTANCE\n",
-        "        self.__couleur = couleur\n",
-        "\n",
-        "    def __str__(self):\n",
-        "        return 'je suis un Félin'\n",
-        "\n",
-        "    def get_race(self):\n",
-        "        return self.__couleur\n",
-        "\n",
-        "    def set_race(self,couleur):\n",
-        "        self.__couleur = couleur\n",
-        "        return\n",
-        "\n",
-        "    def manger_viande(self):\n",
-        "        print('Je viens de manger de la viande')\n",
-        "\n",
-        "    @classmethod\n",
-        "    def tout_les_felins_courent(cls):\n",
-        "        cls.energie = cls.energie - 10\n",
-        "\n",
-        "    #@staticmethod\n",
-        "    def nombre_de_felins(nombre_de_lion, nombre_de_tigre):\n",
-        "        return nombre_de_lion+nombre_de_tigre\n",
-        "\n",
-        "    #1er méthode pour définir une méthode de class\n",
-        "    #tout_les_felins_courent = classmethod(tout_les_felins_courent)\n",
-        "\n",
-        "    #1er méthode pour définir une static méthod\n",
-        "    nombre_de_felins = staticmethod(nombre_de_felins)\n",
-        "\n",
-        "\n",
-        "\n",
-        "class Lion(Felin): #La classe Lion devient classe fils d'Animal\n",
-        "    def __init__(self,race,name,couleur):\n",
-        "        super().__init__(couleur)\n",
-        "        self.__race = race\n",
-        "        self.name = name\n",
-        "\n",
-        "    def get_race(self):\n",
-        "        return self.__race\n",
-        "\n",
-        "    def set_race(self,nouvelle_race):\n",
-        "        self.__race = nouvelle_race\n",
-        "        return\n",
-        "\n",
-        "\n",
-        "gerard_le_lion = Lion('Lion de la savane', 'gerard','beige') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
-        "hakim_le_lion = Lion('Lion des montagnes', 'hakim','marron') #__init__() missing 1 required positional argument: 'couleur' Il faut faire attention a définir les attributs de la classe père !\n",
-        "\n",
-        "print(gerard_le_lion.energie,hakim_le_lion.energie)\n",
-        "print(Felin.energie)\n",
-        "\n",
-        "Felin.tout_les_felins_courent()\n",
-        "\n",
-        "print(gerard_le_lion.energie,hakim_le_lion.energie)\n",
-        "print(Felin.energie)\n",
-        "\n",
-        "print(Felin.nombre_de_felins(3, 2))\n",
-        "\n",
-        "print(gerard_le_lion)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "100 100\n",
-            "100\n",
-            "90 90\n",
-            "90\n",
-            "5\n",
-            "je suis un Félin\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
