--- a/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
+++ b/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
@@ -65,12 +65,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "cTBWJB4mdgVG",
-        "outputId": "b0b26e61-4bc9-4d5b-8461-8122b9c6735b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "id": "cTBWJB4mdgVG",
+        "outputId": "b0b26e61-4bc9-4d5b-8461-8122b9c6735b"
       },
       "execution_count": 4,
       "outputs": [
@@ -156,11 +156,11 @@
         "print(Toto_le_lion.get_race()) # on ne peut pas modifier l'attribut priver"
       ],
       "metadata": {
-        "id": "oq4a1Xhwfxnq",
-        "outputId": "3f2f812e-5348-4138-8a2a-660a13a79b3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oq4a1Xhwfxnq",
+        "outputId": "3f2f812e-5348-4138-8a2a-660a13a79b3a"
       },
       "execution_count": 13,
       "outputs": [
@@ -501,11 +501,11 @@
         "print(gerard_le_lion)"
       ],
       "metadata": {
-        "id": "Rquaa0NPqjYP",
-        "outputId": "81fbed9b-03a0-4040-b8c4-c9530a6cc737",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Rquaa0NPqjYP",
+        "outputId": "81fbed9b-03a0-4040-b8c4-c9530a6cc737"
       },
       "execution_count": 38,
       "outputs": [
@@ -748,16 +748,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BXGP3_QP2Hyy"
-      },
       "source": [
-        "#Petite exercice coder une savane\n",
-        "\n",
-        "<p align=\"center\">\n",
-        "<a href=\"https://youtu.be/_J80GQoVT-4\" target=\"_blank\" ><img  src=\"https://lh3.googleusercontent.com/proxy/p1_D1wdmSrmfhpm3Ur_NsnntBjGRc3v7-7Vc_AKmbNwvHJv3TKNdx9E4JifkM-FFP02rY1ojajspssFflyqScPNkl5CHPGU2TwAPtl6_L8eKJoUW3ZmguAyYhB1JyHQHHQ\" width=\"400\" height=\"auto\"/></a>\n",
-        "</p>\n"
-      ]
+        "# Coder une savane\n"
+      ],
+      "metadata": {
+        "id": "OMD16lzyypKl"
+      }
     },
     {
       "cell_type": "code",
