--- a/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
+++ b/#4 - Programmation objet avancée/4_Programmation_objet_avancée.ipynb
@@ -55,7 +55,7 @@
         "\n",
         "class Animal:\n",
         "\n",
-        "  def __init__(sefl,race):\n",
+        "  def __init__(self,race):\n",
         "    self.__race = race\n",
         "\n",
         "Toto_le_lion = Animal('Lion') # Lion est une instance de ma classe Animal\n",
@@ -72,7 +72,7 @@
         "id": "cTBWJB4mdgVG",
         "outputId": "b0b26e61-4bc9-4d5b-8461-8122b9c6735b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -116,7 +116,7 @@
         "Toto_le_lion.__race = 'Lion de la savane'\n",
         "print(Toto_le_lion.get_race()) # on ne peut pas modifier l'attribut priver"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "id": "oq4a1Xhwfxnq",
         "outputId": "3f2f812e-5348-4138-8a2a-660a13a79b3a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
         "print(gerard_le_lion.name, gerard_le_lion.get_race())\n",
         "gerard_le_lion.manger_viande()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
         "\n",
         "print(gerard_le_lion.nombre_de_patte, hakim_le_lion.nombre_de_patte)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         "id": "Rquaa0NPqjYP",
         "outputId": "81fbed9b-03a0-4040-b8c4-c9530a6cc737"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,12 +757,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Animal:\n",
+        "  def __init__(self, espece, alimentation, speed, rank, name) :\n",
+        "    self.__espece = espece\n",
+        "    self.__alimentation = alimentation\n",
+        "    self.__speed = speed\n",
+        "    self.__rank = rank\n",
+        "    self.__name = name\n",
+        "\n",
+        "  def get_speed(self):\n",
+        "    return self.__speed\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.__name\n",
+        "\n",
+        "  def get_rank(self):\n",
+        "    return self.__rank\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f\"Espèce: {self.__espece}, Alimentation: {self.__alimentation}, Vitesse: {self.__speed}, Rang: {self.__rank}\"\n",
+        "\n",
+        "class Zebra(Animal):\n",
+        "  def __init__(self, name, couleur) :\n",
+        "     super().__init__('Zebra', 'Herbe', 10, 2, name)\n",
+        "     self.__couleur = couleur\n",
+        "\n",
+        "  def get_couleur(self):\n",
+        "    return self.__couleur\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    parent_str = super().__str__()\n",
+        "    return f\"{parent_str}, Couleur : {self.__couleur}\"\n",
+        "\n",
+        "class Leopard(Animal):\n",
+        "  def __init__(self, name) :\n",
+        "     super().__init__('Leopard', 'Viande', 15, 4, name)\n",
+        "\n",
+        "class Lion(Animal):\n",
+        "  def __init__(self, name) :\n",
+        "     super().__init__('Lion', 'Viande', 6, 5, name)\n",
+        "\n",
+        "def find_the_speedest_animal(animals):\n",
+        "\n",
+        "    speedest1 = max(animals, key=lambda animal: animal.get_speed())\n",
+        "    return speedest1.get_name()\n",
+        "\n",
+        "def find_the_lowest_animal(animals):\n",
+        "\n",
+        "    speedest2 = min(animals, key=lambda animal: animal.get_speed())\n",
+        "    return speedest2.get_name()\n",
+        "\n",
+        "def the_king_of_the_savane(animals):\n",
+        "\n",
+        "    rank_test = max(animals, key=lambda animal: animal.get_rank())\n",
+        "    return rank_test.get_name()\n",
+        "\n",
+        "\n",
+        "Pierre_le_zebra = Zebra('Pierre', 'red')\n",
+        "Georges_le_zebra = Zebra('Georges', 'green')\n",
+        "Sylvain_le_leopard = Leopard('Sylvain')\n",
+        "Harry_le_lion = Lion('Harry')\n",
+        "\n",
+        "Animal_list = [Pierre_le_zebra, Georges_le_zebra, Sylvain_le_leopard, Harry_le_lion]\n",
+        "print(Pierre_le_zebra.get_couleur())\n",
+        "print(Georges_le_zebra)\n",
+        "print(Sylvain_le_leopard)\n",
+        "\n",
+        "speedest_animal_name1 = find_the_speedest_animal([Pierre_le_zebra, Georges_le_zebra, Sylvain_le_leopard])\n",
+        "speedest_animal_name2 = find_the_lowest_animal([Pierre_le_zebra, Georges_le_zebra, Sylvain_le_leopard])\n",
+        "\n",
+        "rank_test_animal = the_king_of_the_savane(Animal_list)\n",
+        "\n",
+        "print(\"\\nL'animal le plus rapide est :\")\n",
+        "print(speedest_animal_name1)\n",
+        "print(\"\\nL'animal le plus rapide est :\")\n",
+        "print(speedest_animal_name2)\n",
+        "\n",
+        "print(f\"Le roi de la savane est : {rank_test_animal}\")\n",
+        "\n",
+        "# essayer de créer les différents arguments dans une liste"
+      ],
       "metadata": {
-        "id": "a8MCxYzFzOL3"
+        "id": "a8MCxYzFzOL3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee0e6148-2660-46fe-f4cd-edad076a647f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red\n",
+            "Espèce: Zebra, Alimentation: Herbe, Vitesse: 10, Rang: 2, Couleur : green\n",
+            "Espèce: Leopard, Alimentation: Viande, Vitesse: 15, Rang: 4\n",
+            "\n",
+            "L'animal le plus rapide est :\n",
+            "Sylvain\n",
+            "\n",
+            "L'animal le plus rapide est :\n",
+            "Pierre\n",
+            "Le roi de la savane est : Harry\n"
+          ]
+        }
+      ]
     }
   ]
 }
